testdata/result/query/!bad_hint_select_2.sql.txt
--- !bad_hint_select_2.sql
@{hint = 1} select
--- Error
syntax error: testdata/input/query/!bad_hint_select_2.sql:1:19: unexpected token: <eof>

  1:  @{hint = 1} select
                        ^


--- AST
&ast.QueryStatement{
  Hint: &ast.Hint{
    Rbrace:  10,
    Records: []*ast.HintRecord{
      &ast.HintRecord{
        Key: &ast.Ident{
          NamePos: 2,
          NameEnd: 6,
          Name:    "hint",
        },
        Value: &ast.IntLiteral{
          ValuePos: 9,
          ValueEnd: 10,
          Base:     10,
          Value:    "1",
        },
      },
    },
  },
  Query: &ast.Select{
    Select:  12,
    Results: []ast.SelectItem{
      &ast.ExprSelectItem{
        Expr: &ast.BadNode{
          NodePos: 18,
          NodeEnd: 18,
        },
      },
    },
  },
}

--- SQL
@{hint=1} SELECT 
